# customer-service-chatbot

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
chatbot/: chat.py  embedd.py  generator.py  prompts.py  reranker.py  retriever.py  utils.py
chatbot/commands/: chatbot_cli.py  chatbot_inference.py  data_augumentation.py  generate_data.py  llm_inference.py
configs/: config.py  database.yaml  embedding_config.yaml  llm_config.yaml  telegram.yaml
crawler/: README.md  run_crawl.py  setup.py
crawler/crawler/: items.py  pipelines.py  settings.py  utils.py
crawler/crawler/spiders/: promotion_detail_spider.py  promotion_spider.py
crawler/output/: promotion.csv  promotion_detail.csv
datasets/: vnpt_money_data_1.0.csv
models/: dowload_llm.py
notebook/: test.ipynb
output/response/: ggml_vistral_7B_chat_q4_0_response.csv  gpt4_inference_llm_2024-04-02 12:38.csv
rest_api/: main.py
rest_api/dependencies/: database.py
rest_api/routers/: qa_router.py  telegram_router.py
rest_api/schemas/: items.py
rest_api/services/: qa_service.py  telegram_service.py
tests/: test_chatbot_inference.py  test_qa_service.py
utils/: load_config.py  reader.py
